cleaning up main model

--- a/notebooks/stacked_model_v2_1_20_21.ipynb
+++ b/notebooks/stacked_model_v2_1_20_21.ipynb
@@ -2,39 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!pip install talos"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!pip install spacy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 194,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!pip install scikeras"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 92,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from scikeras.wrappers import KerasClassifier, KerasRegressor"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -44,12 +15,9 @@
    "source": [
     "#!pip install tensorflow-hub\n",
     "import tensorflow_hub as hub\n",
-    "import datetime, os\n",
     "\n",
-    "from numpy import array\n",
-    "from keras.preprocessing.text import one_hot\n",
-    "from keras.preprocessing.sequence import pad_sequences\n",
-    "from keras.models import Sequential\n",
+    "\n",
+    "\n",
     "from keras.layers.core import Activation, Dropout, Dense\n",
     "from keras.layers import Flatten, LSTM\n",
     "from keras.layers import GlobalMaxPooling1D\n",
@@ -67,10 +35,18 @@
     "from sklearn.preprocessing import MinMaxScaler, StandardScaler\n",
     "from sklearn import preprocessing\n",
     "from keras.losses import BinaryCrossentropy\n",
-    "import talos\n",
+    "\n",
     "tf.keras.backend.set_floatx('float64')\n",
     "\n",
-    "pd.set_option('max_columns', 500)"
+    "pd.set_option('max_columns', 500)\n",
+    "\n",
+    "#!pip install talos\n",
+    "\n",
+    "#!pip install spacy\n",
+    "\n",
+    "#!pip install scikeras\n",
+    "\n",
+    "from scikeras.wrappers import KerasClassifier"
    ]
   },
   {
