updated text and added data profile file

--- a/notebooks/stacked_model_v2_1_20_21.ipynb
+++ b/notebooks/stacked_model_v2_1_20_21.ipynb
@@ -4,29 +4,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Predicting County-Level Mask Wearing\n",
+    "# Predicting County-Level Mask Wearing\n",
     "\n",
     "This model is an initial prototype that attempts to forecast mask wearing based on the interaction of static determinants of health behaviors, such as demographic, economic, and social indiacotrs, with information exposure from news and social media. The long-term goal would be to develop a model that is responsive to a changing information environment. Specifically, can we measure how changing information in news and media influences peoples' decision to wear a mask or not at the county-level?\n",
     "\n",
+    "## Integrating realtime information data to predict behavior\n",
+    "\n",
     "The secondary goal of this model is to develop a methodology for integrating realtime information flows with contextual information to predict and/or forecast how different groups of people might change their attitudes, beliefs, and/or behaviors based on an evolving information ecosystem. This type of work could be useful to quickly detect any potential changes in human behavior and help, for example, public health practioners to better allocated resources, design more targeted health communication campaigns, etc. \n",
+    "\n",
+    "## Feature Data\n",
     "\n",
     "This MVP uses as its feature set numeric inputs from the CDC Social Vulnerability Index, Measure of America Youth Disconnection Index, and Apple mobility data at the county-level, combined with county-level geolocated tweets and state geotagged Covid-related news. \n",
     "\n",
+    "The *CDC Social Vulnerability Index* data is mostly complete, so the only preprocessing I did was to apply a MinMax scaler to scale the data since each dimensions typically represents a different kind of measurement. I also converted the county FIPS code and state in categorical variables.\n",
+    "https://www.atsdr.cdc.gov/placeandhealth/svi/data_documentation_download.html\n",
     "\n",
+    "For the *Measure of America Youth Disconnection Index*, there are a number of counties, particulary those that are smaller and/or more rural, that did not have data. In that case, I replaced those missing values with the mean for each county's respective state.\n",
+    "http://www.measureofamerica.org/DYinteractive/#County\n",
     "\n",
+    "I filtered the *Apple mobility* data for the two weeks prior to NYT face mask survey dates. For counties that lacked data, I filled those missing datas with the country-wide mean for that day.\n",
+    "https://covid19.apple.com/mobility\n",
     "\n",
-    "- The target for this model is binary classification about whether more or less than 50 percent of the population for each county wear's a mask. It's derived from the New York Times July 2020 survey into mask wearing.\n"
+    "Tweets from June 15 - July 15 were extracted from the *Coronvavirus Tweets Dataset*, created by Rabindra Lamsal, geolocated to the relevant US county, tokenized, and aggregagted into a set of tokens for each county.\n",
+    "https://ieee-dataport.org/open-access/coronavirus-covid-19-geo-tagged-tweets-dataset\n",
+    "\n",
+    "Finally, I used a dataset of U.S. political news articles I had compiled for another project, did some light \"covid\" keyword filtering for relevant text, applied some light keyword matching for state names, tokenized, and then aggregated at the state level.\n",
+    "https://github.com/AschHarwood/predicting_attitudes_from_news\n",
+    "\n",
+    "Text data collection and processing is quite sloppy for this particular version, but I wanted to spend some time simply learning how to build multi-input keras models.\n",
+    "\n",
+    "### Shape of the Data\n",
+    "\n",
+    "The final feature data set is composed of 3142 rows, one row for each U.S. county. Before creating the word embeddings for text, there are a total of X number of features. \n",
+    "\n",
+    "## Target Data\n",
+    "\n",
+    "The target for this model is binary classification about whether more or less than 50 percent of the population for each county wear's a mask. It's derived from the New York Times July 2020 survey into mask wearing.\n",
+    "https://github.com/nytimes/covid-19-data/tree/master/mask-use\n",
+    "\n",
+    "## Model Structure\n",
+    "\n",
+    "The model's architecture consists of a multi-input feed forward neural net built with Keras' functional API. To preprocess the text data, I used word embeddings created by a pretrained model custom build for covid-related content.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "#!pip install tensorflow-hub\n",
+    "#!pip install pandas-profiling[notebook]\n",
+    "\n",
     "import tensorflow_hub as hub\n",
     "\n",
+    "from pandas_profiling import ProfileReport\n",
     "\n",
     "\n",
     "from keras.layers.core import Activation, Dropout, Dense\n",
@@ -62,35 +94,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#read in and process data\n",
-    "df = pd.read_csv('/home/aschharwood/notebooks/covid/feature_target_v1_county_nyt_cdc_moa_tweets_gdelt_apple.csv')\n",
+    "# #read in and process data\n",
+    "# df = pd.read_csv('/home/aschharwood/notebooks/covid_county_mask_predictions/data/feature_target_text_processed_1_20_20.csv')\n",
     "\n",
-    "df.drop('Unnamed: 0', axis=1, inplace=True)\n",
+    "df = pd.read_csv('/home/aschharwood/notebooks/covid_county_mask_predictions/data/feature_target_text_processed_1_20_20.csv')\n",
+    "df.drop(['Unnamed: 0', 'COUNTYFP.1'], axis=1, inplace=True)\n",
     "\n",
     "#df.info(max_cols=500)\n",
     "\n",
     "mean = df._get_numeric_data().mean()\n",
     "\n",
-    "#fill empty mobility data with column mean\n",
+    "# #fill empty mobility data with column mean\n",
     "df.fillna(mean, inplace=True)\n",
     "\n",
-    "#df.head()\n",
+    "# #df.head()\n",
     "\n",
     "df['COUNTYFP'] = df['COUNTYFP'].astype('string')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_profile = ProfileReport(df[['text_tokens_str', 'High', 'Low']], title='Text Report', explorative=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9da633d6ddc04d59bc22d132b5293d81",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Summarize dataset'), FloatProgress(value=0.0, max=11.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "text_profile.to_file('text_report.html')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    "#df.describe()\n",
-    "\n",
-    "import numpy as np\n",
-    "\n",
-    "#create binary target\n",
-    "df['always_binary'] = np.where(df['ALWAYS']>.50, 1, 0)\n",
-    "\n",
-    "df['always_binary'].value_counts()\n",
-    "df.fillna(df._get_numeric_data().mean(), inplace=True)"
+    "profile = ProfileReport(df, title=\"Pandas Profiling Report\", minimal=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c743f38228a3420e9cdb2757e465551e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Summarize dataset'), FloatProgress(value=0.0, max=228.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8a7e01bd68cd453dade4e045b633133c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Generate report structure'), FloatProgress(value=0.0, max=1.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "52b947d2700c482db344b352d2a8d518",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Render HTML'), FloatProgress(value=0.0, max=1.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4169b9aa70324ff7abaae41188c417b9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Export report to file'), FloatProgress(value=0.0, max=1.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "profile.to_file(\"output.html\")"
    ]
   },
   {
